--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Unity WebGL Player | Cosmic Codebreaker</title>
   </head>
-  <body style="text-align: center; padding: 0; border: 0; margin: 0;>
+  <body style="text-align: center; padding: 0; border: 0; margin: 0;">
     <canvas id="unity-canvas" width=1600 height=800 style="width: 1600px; height: 800px; background: url('Build/Cosmic Codebreaker webgl.jpg') center / cover"></canvas>
     <script src="Build/Cosmic Codebreaker webgl.loader.js"></script>
     <script>
