--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Unity WebGL Player | Cosmic Codebreaker</title>
   </head>
   <body style="text-align: center; padding: 0; border: 0; margin: 0;">
-    <canvas id="unity-canvas" width=1600 height=800 style="width: 1600px; height: 800px; background: url('Build/Cosmic Codebreaker webgl.jpg') center / cover"></canvas>
+    <canvas id="unity-canvas" width=1600 height=800 style="width: 100%; height: 100%; background: url('Build/Cosmic Codebreaker webgl.jpg') center / cover"></canvas>
     <script src="Build/Cosmic Codebreaker webgl.loader.js"></script>
     <script>
       if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
@@ -17,8 +17,8 @@
         document.getElementsByTagName('head')[0].appendChild(meta);
 
         var canvas = document.querySelector("#unity-canvas");
-        canvas.style.width = "50%";
-        canvas.style.height = "50%";
+        canvas.style.width = "100%";
+        canvas.style.height = "100%";
         canvas.style.position = "fixed";
 
         document.body.style.textAlign = "left";
